# VapourSynth-IsCombed

./: README.md  meson.build  pyproject.toml
.github/workflows/: build.yml
IsCombed/: iscombed.cpp
